--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,4 +119,4 @@ workflow_dispatch:
       TOOLCHAIN_URL_GCC:
         description: "URL do toolchain GCC ARM32"
         required: true
-        default: "https://github.com/LineageOS/
+        default: "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9.git"
