--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,10 @@ jobs:
         # Disable PAM to avoid additional password checks
         UsePAM no
         
+        # clone kernel
+        echo "📥 Clonando seu kernel..."
+        git clone https://github.com/alessandroaraujo5/KERNEL--GUAMP.git
+        
         # Other settings
         X11Forwarding yes
         PrintMotd yes
@@ -124,9 +128,7 @@ jobs:
           echo "📄 Bore Output:"
           cat bore_output.txt
           echo ""
-          echo "📥 Clonando seu kernel..."
-        git clone https://github.com/alessandroaraujo5/KERNEL--GUAMP.git
-        
+          
           # Extract port number
           TUNNEL_PORT=$(cat bore_output.txt | grep -oE 'bore\.pub:[0-9]+' | cut -d: -f2)
           if [ ! -z "$TUNNEL_PORT" ]; then
